# AgendaCompromissos

./: CMakeLists.txt  main.cpp
agendaCompromisso/: agendaCompromisso.pro  agendaCompromisso.pro.user.419c03a  agendaCompromisso.pro.user.4354f0d  bdcontroll.cpp  bdcontroll.h  calendariocompromissos.cpp  calendariocompromissos.h  calendariocompromissos.ui  compromisso.cpp  compromisso.h  fila.cpp  fila.h  ldde.cpp  ldde.h  main.cpp  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.ui  no.cpp  no.h  pessoa.cpp  pessoa.h  registrar.cpp  registrar.h  registrar.ui  registrar.ui.autosave  registrarcompromisso.cpp  registrarcompromisso.h  registrarcompromisso.ui  telinhabuscar.cpp  telinhabuscar.h  telinhabuscar.ui
build-agendaCompromisso-Desktop_Qt_5_10_1_MSVC2015_64bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  object_script.agendaCompromisso.Debug  object_script.agendaCompromisso.Release  ui_calendariocompromissos.h
build-agendaCompromisso-Desktop_Qt_5_10_1_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  object_script.agendaCompromisso.Debug  object_script.agendaCompromisso.Release  ui_calendariocompromissos.h  ui_mainwindow.h  ui_registrar.h  ui_registrarcompromisso.h  ui_telinhabuscar.h
build-agendaCompromisso-Desktop_Qt_5_10_1_MinGW_32bit-Debug/debug/: moc_bdcontroll.cpp  moc_calendariocompromissos.cpp  moc_registrar.cpp  moc_telinhabuscar.cpp
build-agendaCompromisso-Desktop_Qt_5_10_1_MinGW_32bit-Release/: Makefile  Makefile.Debug  Makefile.Release  ui_calendariocompromissos.h  ui_registrar.h
(+2 files in other folders)
